Bug 141963 - F5 shortcut for navigator dont' close navigator window
Summary: F5 shortcut for navigator dont' close navigator window
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.4.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.4
Keywords:
Depends on:
Blocks: Shortcuts-Accelerators Wayland Navigator
  Show dependency treegraph
 
Reported: 2021-04-29 07:08 UTC by bentusiii@yahoo.fr
Modified: 2021-05-06 00:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bentusiii@yahoo.fr 2021-04-29 07:08:24 UTC
Description:
F5 is used as default shortcut for display navigator window (or side panel but this function has disappeared in last version). Thus pressing F5 again don't allow to close the navigator window...

Steps to Reproduce:
1. open writer document
2. press F5 OR select menu / display / navigator -> navigator window should appear
3. press F5 again -> navigator window is not closed, but need to be closed manually (with click on window's closing symbol its own title bar)

Actual Results:
press F5 when navigator window is open DO NOT close navigator window.

Expected Results:
press F5 when navigator window is open DO close navigator window.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
see also Bug 141962
Comment 1 Roman Kuznetsov 2021-04-29 09:25:36 UTC
Works fine in

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 15a9bee9ef26ce13ed1e26319306a88b6d886158
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

Please write here info from LibreOffice's Help->About dialog as me above. Thank you
Comment 2 bentusiii@yahoo.fr 2021-04-29 09:38:10 UTC
Version: 7.1.2.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
7.1.2-3
Calc: threaded
Comment 3 bentusiii@yahoo.fr 2021-04-29 09:40:10 UTC
i'ma on manjaro latest gnome lateste version (21.0.3)
window system = wayland
Comment 4 Julien Nabet 2021-04-29 11:15:11 UTC
On pc Debian x86-64 with LO Debian package 7.0.4.2, I can reproduce this with kf5 and gtk3 rendering not with gen rendering.
Comment 5 Roman Kuznetsov 2021-04-29 11:30:12 UTC
Julien, do you use Wayland or X11?
Comment 6 Julien Nabet 2021-04-29 11:37:07 UTC
(In reply to Roman Kuznetsov from comment #5)
> Julien, do you use Wayland or X11?

By default, I thought I used Wayland but I tried this command:
loginctl show-session 2 -p Type
(from https://unix.stackexchange.com/questions/202891/how-to-know-whether-wayland-or-x11-is-being-used)
and it gives me x11.

(I'm on pc Debian x86-64 testing updated today).
Comment 7 Caolán McNamara 2021-04-29 13:31:07 UTC
F5 in the writer document will open, and close, the navigator. The issue arises when the focus in in a widget in the navigator.
Comment 8 Commit Notification 2021-04-29 18:59:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b96797dd2e6578e8e1a4cea0fa2f3a17bc194a1c

tdf#141963 put focus in vcl parent during Function key processing

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2021-04-29 19:01:33 UTC
that does the right thing for me. backport to 7-1 in gerrit
Comment 10 Julien Nabet 2021-04-29 20:35:58 UTC
Thank you Caolán for the patch, navigator window works ok (open and close), I checked for gen, kf5 and gtk3 renderings.
Comment 11 Commit Notification 2021-05-06 00:49:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/1dd4bfc1fc4b9ba178fb8ee3b24b85aa3ef0c115

tdf#141963 put focus in vcl parent during Function key processing

It will be available in 7.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.