tdf#141963 put focus in vcl parent during Function key processing

Change-Id: Ib63567c9ce208cb7dd522a1bce9d99fa44a72554